@@ -22,6 +22,7 @@ void testGeneric(void)
 #endif
   ASSERT (_Generic(e, default : 0, int : 1, char : 2) == 1);
   ASSERT (_Generic(c, default : 0, int : 1, char : 2) == 2);
+  ASSERT (_Generic("c"[0], char : 1, default : 0) == _Generic(c, char : 1, default : 0)); // There once was a bug where the sign of plain char different from the sign of char in string literals.
 #endif
 }
 
